set(INC_INTERNAL
  inc/Internal/WNBasicTraits.h
  inc/Internal/WNBounds2.inl
  inc/Internal/WNBox.inl
  inc/Internal/WNConfig.h
  inc/Internal/WNElementArray.h
  inc/Internal/WNFrustum.inl
  inc/Internal/WNGeneralTraits.h
  inc/Internal/WNLine2.inl
  inc/Internal/WNLine3.inl
  inc/Internal/WNMatrix2.inl
  inc/Internal/WNMatrix3Base.h
  inc/Internal/WNMatrix3Base.inl
  inc/Internal/WNMatrix3.inl
  inc/Internal/WNMatrix4Base.h
  inc/Internal/WNMatrix4Base.inl
  inc/Internal/WNMatrix4.inl
  inc/Internal/WNMatrixBase.h
  inc/Internal/WNMatrixBase.inl
  inc/Internal/WNMatrixX.inl
  inc/Internal/WNPlane.inl
  inc/Internal/WNQuaternionBase.h
  inc/Internal/WNQuaternionBase.inl
  inc/Internal/WNRay2.inl
  inc/Internal/WNRay3.inl
  inc/Internal/WNRectangle.inl
  inc/Internal/WNSegment2.inl
  inc/Internal/WNSegment3.inl
  inc/Internal/WNVectorTraits.h
)
set(INC_INTERNAL_EXTENSIONS_X86
  inc/Internal/Extensions/x86/WNBasicTraits.h
  inc/Internal/Extensions/x86/WNConfig.h
  inc/Internal/Extensions/x86/WNConstants.h
  inc/Internal/Extensions/x86/WNElementArray.h
  inc/Internal/Extensions/x86/WNGeneralTraits.h
  inc/Internal/Extensions/x86/WNUtilities.h
  inc/Internal/Extensions/x86/WNVectorTraits.h
)
set(INC_INTERNAL_EXTENSIONS_X86_SSE
  inc/Internal/Extensions/x86/SSE/WNBasicTraits.h
  inc/Internal/Extensions/x86/SSE/WNElementArray.h
  inc/Internal/Extensions/x86/SSE/WNGeneralTraits.h
  inc/Internal/Extensions/x86/SSE/WNVectorTraits.h
)
set(INC_INTERNAL_EXTENSIONS_X86_SSE2
  inc/Internal/Extensions/x86/SSE2/WNBasicTraits.h
  inc/Internal/Extensions/x86/SSE2/WNElementArray.h
  inc/Internal/Extensions/x86/SSE2/WNVectorTraits.h
)
set(INC_INTERNAL_EXTENSIONS_X86_SSE41
  inc/Internal/Extensions/x86/SSE4.1/WNBasicTraits.h
  inc/Internal/Extensions/x86/SSE4.1/WNVectorTraits.h
)
set(INC_INTERNAL_GENERIC
  inc/Internal/Generic/WNBasicTraits.h
  inc/Internal/Generic/WNElementArray.h
  inc/Internal/Generic/WNGeneralTraits.h
  inc/Internal/Generic/WNVectorTraits.h
)
source_group("inc\\Internal" FILES ${INC_INTERNAL})
source_group("inc\\Internal\\Extensions\\x86" FILES ${INC_INTERNAL_EXTENSIONS_X86})
source_group("inc\\Internal\\Extensions\\x86\\SSE" FILES ${INC_INTERNAL_EXTENSIONS_X86_SSE})
source_group("inc\\Internal\\Extensions\\x86\\SSE2" FILES ${INC_INTERNAL_EXTENSIONS_X86_SSE2})
source_group("inc\\Internal\\Extensions\\x86\\SSE4.1" FILES ${INC_INTERNAL_EXTENSIONS_X86_SSE41})
source_group("inc\\Internal\\Generic" FILES ${INC_INTERNAL_GENERIC})
add_wn_header_library(WNMath
  inc/WNBasic.h
  inc/WNBounds2.h
  inc/WNBounds3.h
  inc/WNBox.h
  inc/WNCircle.h
  inc/WNCommon.h
  inc/WNConfig.h
  inc/WNConstants.h
  inc/WNFrustum.h
  inc/WNLine2.h
  inc/WNLine3.h
  inc/WNMath.h
  inc/WNMatrix2.h
  inc/WNMatrix3.h
  inc/WNMatrix4.h
  inc/WNMatrix.h
  inc/WNPlane.h
  inc/WNPoint.h
  inc/WNQuaternion.h
  inc/WNRay2.h
  inc/WNRay3.h
  inc/WNRectangle.h
  inc/WNSegment2.h
  inc/WNSegment3.h
  inc/WNSphere.h
  inc/WNVector.h
  ${INC_INTERNAL}
  ${INC_INTERNAL_EXTENSIONS_X86}
  ${INC_INTERNAL_EXTENSIONS_X86_SSE}
  ${INC_INTERNAL_EXTENSIONS_X86_SSE2}
  ${INC_INTERNAL_EXTENSIONS_X86_SSE41}
  ${INC_INTERNAL_GENERIC}
)

add_subdirectory(test)
